# MORPH

./: README.md  compose.local.yaml  compose.yaml  index.html
backend/: Dockerfile  main.py  pyproject.toml
backend/features/learning/static/css/: learning.css
backend/features/learning/static/js/: learning.js
backend/features/my_robot/: socket_handlers.py
backend/foxglove/: client.py  config.py
backend/robots/: robot.py  robot_listener.py
backend/utils/: sio_pydantic_wrapper.py
desktop/: setup.py
desktop/features/learning/: __init__.py  routes.py
desktop/features/learning/static/css/k5/: k5.css
desktop/features/learning/static/js/lessons/K_5/: k5.js  lesson-modal.js  lessons-data.js
desktop/features/learning/templates/: learning.html
desktop/features/learning/templates/k5/: k5.html
frontend/: .cta.json  .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/src/: env.ts  routeTree.gen.ts  socket.ts
frontend/src/components/: DPad.tsx  Header.tsx
frontend/src/routes/: __root.tsx  index.server.ts  index.tsx
frontend/src/routes/dashboard/: index.tsx
robot/: .dockerignore  Dockerfile  broadcast.py  entrypoint.sh  pyproject.toml
